--- a/README
+++ b/README
@@ -2,16 +2,18 @@
 --- Multi-core LIBLINEAR ---
 ----------------------------
 
-LIBLINEAR is a simple package for solving large-scale regularized linear
-classification, regression and outlier detection.
-This extension of LIBLINEAR supports multi-core parallel learning by OpenMP.
-We applied efficient implementations to train models for multi-core machines.
-It currently supports
+LIBLINEAR is a simple package for solving large-scale regularized
+linear classification, regression and outlier detection. This
+extension of LIBLINEAR supports multi-core parallel learning by
+OpenMP. We applied efficient implementations to train models for
+multi-core machines. Single-core LIBLINEAR currently supports
+
 - L2-regularized logistic regression/L2-loss support vector classification/L1-loss support vector classification
 - L1-regularized L2-loss support vector classification/L1-regularized logistic regression
 - L2-regularized L2-loss support vector regression/L1-loss support vector regression
 - one-class support vector machine.
-This document explains the usage of multi-core LIBLINEAR.
+
+Some have been extended or modified to use multi cores. See ``Differences from Single-core LIBLINEAR'' for details.
 
 To get started, please read the ``Quick Start'' section first.
 For developers, please check the ``Library Usage'' section to learn
@@ -38,26 +40,28 @@ Table of Contents
 Differences from Single-core LIBLINEAR
 ======================================
 
-	Primal L2-regularized solvers (-s 0, -s 2)
-	------------------------------------------
-	Do matrix-vector multiplications in parallel.
+The following solvers can be run in parallel.
 
-	Dual L2-regularized solvers (-s 1, -s 3, -s 11)
-	-----------------------------------------------
-	Calculate the gradients in parallel, and then do CD
-	(coordinate descent) updates serially.
+        Primal L2-regularized solvers (-s 0, -s 2)
+        ------------------------------------------
+        It does matrix-vector multiplications in parallel.
 
-	Primal l1-regularized solvers (-s 5, -s 6)
-	------------------------------------------
-	Parallelize feature-wise operations for the features
-	that have enough non-zeros.
+        Dual L2-regularized solvers (-s 1, -s 3, -s 11)
+        -----------------------------------------------
+        It calculates the gradients in parallel, and then conducts CD
+        (coordinate descent) updates serially.
+
+        Primal l1-regularized solvers (-s 5, -s 6)
+        ------------------------------------------
+        It parallelizes feature-wise operations for the features
+        that have enough non-zeros.
+
+Details of the above solvers can be found in the references.
 
 Note: Parallelization on cross-validation or parameter search is turned off
-by default, to enable it please refer to Section
+by default. To enable it please refer to the section
 "Parallelization on Cross-validation and Parameter Search (for ALL solvers)"
 at https://www.csie.ntu.edu.tw/~cjlin/libsvmtools/multicore-liblinear/
-
-More details can be found in the references.
 
 When to use LIBLINEAR but not LIBSVM
 ====================================
@@ -713,8 +717,8 @@ PYTHON Interface
 
 Please check the file README in the directory `python'.
 
-Reference for Multi-core Implementations
-========================================
+References for Multi-core Implementations
+=========================================
 
 M.-C. Lee, W.-L. Chiang, and C.-J. Lin.
 Fast matrix-vector multiplications for large-scale logistic regression on shared-memory systems.
