Fix table of contents

--- a/README
+++ b/README
@@ -34,7 +34,7 @@ Table of Contents
 - Building Windows Binaries
 - MATLAB/OCTAVE interface
 - PYTHON interface
-- Reference for Multi-core Implementations
+- References for Multi-core Implementations
 - Additional Information
 
 Differences from Single-core LIBLINEAR
